[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/atlas.png" type="Texture" id=1]
[ext_resource path="res://scenes/xcode.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/sfx/squash.wav" type="AudioStream" id=3]
[ext_resource path="res://scripts/gameloop.gd" type="Script" id=4]
[ext_resource path="res://assets/Kenney Pixel.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/bgm/chill.wav" type="AudioStream" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 72, 42 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 5 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 168, 48, 27, 30 )

[sub_resource type="CircleShape2D" id=4]
radius = 20.2103

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="UI" type="CanvasLayer" parent="."]
layer = -5

[node name="BigSur" type="TextureRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = SubResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Overlay" type="ColorRect" parent="UI"]
modulate = Color( 1, 1, 1, 0.929412 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.0666667, 0.0666667, 0.109804, 0.505882 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameWindow" parent="UI" instance=ExtResource( 2 )]

[node name="Tutorial" type="Control" parent="UI"]
anchor_right = 1.0
margin_bottom = 39.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Overlay" type="ColorRect" parent="UI/Tutorial"]
modulate = Color( 1, 1, 1, 0.929412 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.0666667, 0.0666667, 0.109804, 0.505882 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Tutorial"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -233.5
margin_top = -11.0
margin_right = 233.5
margin_bottom = 11.0
custom_fonts/font = SubResource( 2 )
text = "Click on the bug to squash it. Can you find them all?"
align = 1

[node name="IncrementedTimer" type="Timer" parent="."]
autostart = true

[node name="GameTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="Bug" type="Sprite" parent="."]
position = Vector2( 155.004, 319.546 )
texture = SubResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Detector" type="Area2D" parent="Bug"]
z_index = 1
z_as_relative = false
priority = 10.0
monitoring = false
monitorable = false
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bug/Detector"]
position = Vector2( 0.0436401, 0.104645 )
shape = SubResource( 4 )

[node name="Squash" type="AudioStreamPlayer2D" parent="Bug"]
stream = ExtResource( 3 )

[node name="Theme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true
